Add /student/ GET call
